💄Fix same spacing on mobile and desktop
MT-1009

--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -28,10 +28,12 @@
       }
 
       @media only screen and (min-width: $breakpoint-large) {
+        padding-right: var(--spacer-xxx-small);
         display: inline;
         &:nth-last-child(2) {
           a::before {
             transform: rotateY(0);
+            margin-right: var(--spacer-xxx-small);
           }
         }
       }
